# ifcconvert

./: BrepBuilder.h  BrepReaderVisitor.cpp  BrepReaderVisitor.h  Builder.cpp  Builder.h  CMakeLists.txt  Visitor.cpp  Visitor.h  ifcconvert.cpp
dat/: 111.ifc  111.out  111.outi  Project1.ifc  Project1.out  basic_sample_1.out  run.ini  tasks.ifc  walls.ifc  walls.out  walls2.ifc  walls2.out  walls3.ifc  walls3.ini  wallsJuly19.ifc  wallsJuly19.ini
dat/walls3/: mat.txt  mod.txt  model.txt  models.txt  oper.txt  oper_mat.txt
dat/wallsJuly19/: mat.txt  mod.txt  model.txt  oper.txt  oper_mat.txt
src/Step/: CMakeLists.txt
src/ifc2x3/: CMakeLists.txt
